--- a/Public/index.html
+++ b/Public/index.html
@@ -1971,15 +1971,19 @@
     (function ($) {
         jq = $;
     })(jQuery);
+    let initCurLang = 'EN';
+    if (window.localStorage.getItem("curLang") == 'EN' || window.localStorage.getItem("curLang") == 'CN') {
+        initCurLang = window.localStorage.getItem("curLang")
+    }
     new Vue({
         el: '#page-container',
         data: {
-            curLang: window.localStorage.getItem("curLang") || 'EN',
+            curLang: initCurLang,
             email: '',
             submitClick: true
         },
         i18n: new VueI18n({
-            locale: (window.localStorage.getItem("curLang") || 'EN').toLocaleLowerCase(),
+            locale: initCurLang.toLocaleLowerCase(),
             messages: language
         }),
         mounted() {
@@ -2014,8 +2018,12 @@
                             jq(this).css('color', '#FFFFFF')
                         }
                         jq(this).on('click', function (_) {
-                            that.toggleLang(jq(this)[0].text.toLocaleLowerCase())
-                            that.setup_collapsible_submenus()
+                            let lang = jq(this)[0].text
+                            if (lang == 'EN' || lang == 'CN') {
+                                that.toggleLang(lang.toLocaleLowerCase())
+                                that.setup_collapsible_submenus()
+                            }
+                            that.hiddenMenu()
                         });
                     } else {
                         jq(this).on('click', function (event) {
@@ -2024,6 +2032,11 @@
                         });
                     }
                 });
+            },
+            hiddenMenu() {
+                setTimeout(() => {
+                    jq('#mobile_menu').css({'display': 'none'})
+                }, 250)
             },
             contactUs () {
                 let reg = /^([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+@([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
