Storage Provider button effect and Resolve problems in English

--- a/Public/index.html
+++ b/Public/index.html
@@ -1234,11 +1234,11 @@
                                                 <div class="et_pb_text_inner"><p><span>{{$t('Human Aata Factories Details')}}</span></p>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
-                                            <div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_tablet_center et_pb_module ">
-                                                <a style="margin: 26px 13px 0px 13px; width: 210px; text-align: center;"
+                                            <div class="et_pb_button_module_wrapper et_pb_button_10_wrapper  et_pb_module">
+                                                <a style="margin: 26px 13px 0px 13px; width: 216px; text-align: center"
                                                    class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                   href="./filfrog.html" target="_self">{{$t('Storage Provider')}}</a>
-                                                <a style="margin: 26px 13px 0px 13px; background: #ffffff;color: #151A24; width: 210px; text-align: center;"
+                                                   href="./filfrog.html" target="_self">{{$t('StorageProvider')}}</a>
+                                                <a style="margin: 26px 13px 0px 13px; background: #ffffff;color: #151A24; width: 216px; text-align: center"
                                                    class="et_pb_button et_pb_button_11 et_pb_bg_layout_light"
                                                    href="./files.html" target="_self">{{$t('Storage Data')}}</a>
                                             </div>
@@ -1364,7 +1364,7 @@
                                                     <a style="margin-top: 30px;"
                                                        class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
                                                        href="./filfrog.html"
-                                                       target="_self">{{$t('Storage Provider')}}</a>
+                                                       target="_self">{{$t('StorageProvider')}}</a>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
