The UI adjustment

--- a/Public/filfrog.html
+++ b/Public/filfrog.html
@@ -1996,7 +1996,8 @@ div.et_pb_section.et_pb_section_0 {
 }
 
 .et_pb_text_1.et_pb_text {
-    color: #b7b7b7 !important
+    color: #CED7F5 !important;
+    opacity: 0.6;
 }
 
 .et_pb_text_1 {
