The UI optimization

--- a/Public/files.html
+++ b/Public/files.html
@@ -728,7 +728,7 @@
     }
 
     .et_pb_text_align_center-image img {
-        width: 80%;
+        width: 100%;
         margin-top: 25px;
     }
 
@@ -1343,10 +1343,9 @@
                                                 <div class="et_pb_text_inner"><p><span>{{$t('S3 compatible Details')}}</span></p></div>
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
-                                        <div class="et_pb_column et_pb_column_1_2 et_pb_column_16  et_pb_css_mix_blend_mode_passthrough et-last-child">
-                                            <div class="et_pb_module et_pb_image et_pb_image_23">
-                                                <span class="et_pb_image_wrap has-box-shadow-overlay"><div
-                                                        class="box-shadow-overlay"></div><img
+                                        <div class="et_pb_column et_pb_column_1_2 et_pb_column_28  et_pb_css_mix_blend_mode_passthrough et-last-child">
+                                            <div class="et_pb_module et_pb_image et_pb_image_29">
+                                                <span class="et_pb_image_wrap "><img
                                                         src="assets/s3.png"
                                                         alt="" title=""/></span>
                                             </div>
