--- a/Public/index.html
+++ b/Public/index.html
@@ -1460,22 +1460,25 @@
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_29  et_pb_text_align_left et_pb_text_align_center-tablet et_pb_bg_layout_light">
                                                 <div class="et_pb_module et_pb_text et_pb_text_15  et_pb_text_align_left et_pb_text_align_center-tablet et_pb_bg_layout_light">
-                                                    <div class="et_pb_text_inner"><p><img width="10"
-                                                                                          src="assets/square.png">&nbsp;<span>{{$t('Store files on the IPFS network Details 1')}}</span>
-                                                    </p>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 10px; height: 10px; margin-top: 7px; margin-right: 10px;" src="assets/square.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Store files on the IPFS network Details 1')}}</span></p></div>
                                                     </div>
                                                     <br/>
-                                                    <div class="et_pb_text_inner"><p><img width="10"
-                                                                                          src="assets/square.png">&nbsp;<span>{{$t('Store files on the IPFS network Details 2')}}</span>
-                                                    </p></div>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 10px; height: 10px; margin-top: 7px; margin-right: 10px;" src="assets/square.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Store files on the IPFS network Details 2')}}</span></p></div>
+                                                    </div>
                                                     <br/>
-                                                    <div class="et_pb_text_inner"><p><img width="10"
-                                                                                          src="assets/square.png">&nbsp;<span>{{$t('Store files on the IPFS network Details 3')}}</span>
-                                                    </p></div>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 10px; height: 10px; margin-top: 7px; margin-right: 10px;" src="assets/square.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Store files on the IPFS network Details 3')}}</span></p></div>
+                                                    </div>
                                                     <br/>
-                                                    <div class="et_pb_text_inner"><p><img width="10"
-                                                                                          src="assets/square.png">&nbsp;<span>{{$t('Store files on the IPFS network Details 4')}}</span>
-                                                    </p></div>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 10px; height: 10px; margin-top: 7px; margin-right: 10px;" src="assets/square.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Store files on the IPFS network Details 4')}}</span></p></div>
+                                                    </div>
                                                 </div> <!-- .et_pb_text -->
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
@@ -1494,18 +1497,20 @@
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_32  et_pb_text_align_left et_pb_text_align_center-tablet et_pb_bg_layout_light">
                                                 <div class="et_pb_module et_pb_text et_pb_text_15  et_pb_text_align_left et_pb_text_align_center-tablet et_pb_bg_layout_light">
-                                                    <div class="et_pb_text_inner"><p><img width="18"
-                                                                                          src="assets/check.png">&nbsp;<span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 1')}}</span>
-                                                    </p>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 18px; height: 14px; margin-top: 5px; margin-right: 10px;" src="assets/check.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 1')}}</span></p></div>
                                                     </div>
                                                     <br/>
-                                                    <div class="et_pb_text_inner"><p><img width="18"
-                                                                                          src="assets/check.png">&nbsp;<span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 2')}}</span>
-                                                    </p></div>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 18px; height: 14px; margin-top: 5px; margin-right: 10px;" src="assets/check.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 2')}}</span></p></div>
+                                                    </div>
                                                     <br/>
-                                                    <div class="et_pb_text_inner"><p><img width="18"
-                                                                                          src="assets/check.png">&nbsp;<span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 3')}}</span>
-                                                    </p></div>
+                                                    <div style="display: flex; flex-direction: row">
+                                                        <img style="width: 18px; height: 14px; margin-top: 5px; margin-right: 10px;" src="assets/check.png">
+                                                        <div class="et_pb_text_inner et_pb_text_align_left"><p><span>{{$t('Frogfs provides customized distributed storage for Filecoin Details 3')}}</span></p></div>
+                                                    </div>
                                                 </div> <!-- .et_pb_text -->
                                                 <div class="et_pb_button_module_wrapper et_pb_button_10_wrapper  et_pb_module ">
                                                     <a style="margin-top: 25px;"
@@ -1651,7 +1656,7 @@
                                 <!--Contact Us-->
                                 <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular" style="background-image: url(./assets/contactus.png) !important; overflow: hidden">
                                     <div class="et_pb_row et_pb_row_0 ">
-                                        <div style="width: 100%; margin: 80px 0 30px 0;"
+                                        <div style="width: 100%; margin: 120px 0 70px 0;"
                                              class="et_pb_column et_pb_column_1_2 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough">
                                             <div style="width: 100%"
                                                  class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_center et_pb_bg_layout_light">
@@ -1663,7 +1668,7 @@
                                                             style="font-size: 18px; color: #CED7F5; opacity: 0.6;">{{$t('Contact Us Details 1')}}</span>
                                                     </p></div>
                                                 </div>
-                                                <div style="margin: 40px auto 30px auto; width: 100%; max-width: 500px; height: 45px; border-radius: 10px; background: #ffffff; position: relative;">
+                                                <div style="margin: 60px auto 30px auto; width: 100%; max-width: 500px; height: 45px; border-radius: 10px; background: #ffffff; position: relative;">
                                                     <input style="width: 100%; height: 100%; border: none; outline: none; border-radius: 10px; padding: 0 150px 0 15px;"
                                                            :placeholder="$t('Enter your email')" v-model="email">
                                                     <div v-if="submitClick" style="position: absolute; right: 0; top: 0; bottom: 0; width: 135px; height: 100%; cursor: pointer;"
@@ -4088,6 +4093,9 @@ ul.et_pb_social_media_follow_0 a.icon {
     position: relative;
     border-radius: 8px 8px 8px 8px;
     border: 1px solid #E0E8F2;
+}
+
+.et_pb_column_3:hover {
     box-shadow: 0px 16px 20px 2px rgba(138, 141, 153, 0.08);
 }
 
