--- a/Public/frogfs.html
+++ b/Public/frogfs.html
@@ -3787,8 +3787,7 @@ ul.et_pb_social_media_follow_0 a.icon {
     position: relative;
     display: flex;
     border-radius: 8px 8px 8px 8px;
-    border: 1px solid #E0E8F2;
-    box-shadow: 0px 16px 20px 2px rgba(138, 141, 153, 0.08);
+    background: #ffffff;
     padding: 2%;
     width: calc( 50% - 20px ) ;
     margin-right: 20px !important;
